# credit-scoring

./: Dockerfile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
api/: app.py  schemas.py
config/: model_config.yaml
scripts/: monitor_drift.py
src/data/: make_dataset.py  validation.py
src/features/: build_features.py
src/models/: train.py  train_model.py
src/visualization/: visualize.py
tests/: test_data.py
