[project]
name = "credit-scoring-model"
version = "0.1.0"
description = "Automated ML pipeline for credit default prediction"
authors = [
    {name = "Vasiliy_D", email = "your.email@example.com"},
]
dependencies = [
    "scikit-learn>=1.2.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "mlflow>=2.4.0",
    "dvc[s3]>=2.51.0",
    "great-expectations>=0.16.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pydantic>=1.10.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "jupyter>=1.0.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]